--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,87 @@
-# Node
+# === Node ===
 node_modules/
-backend/node_modules/
-
-# Environment variables
-.env
-
-# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# OS
+# === Build outputs ===
+dist/
+build/
+.cache/
+.vite/
+coverage/
+
+# === Environment ===
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# === Logs ===
+logs
+*.log
+*.log.*
+log/
+debug.log
+
+# === OS ===
 .DS_Store
+Thumbs.db
+
+# === Editor ===
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# === TypeScript ===
+*.tsbuildinfo
+
+# === Misc ===
+# Ignore temporary files
+tmp/
+temp/
+*.tmp
+
+# === Backend specific ===
+backend/node_modules/
+backend/dist/
+backend/.env
+
+# === Frontend specific ===
+frontend/node_modules/
+frontend/dist/
+frontend/.env
+
+# === Optional ===
+# Local configuration
+*.local
+
+# === Python ===
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pdb
+*.pkl
+*.pickle
+*.py.class
+
+# Virtual environments
+venv/
+env/
+.venv/
+
+# Python build artifacts
+build/
+dist/
+*.egg-info/
+.eggs/
+
+# Local python settings
+*.env.python
+
+# === Temporary files ===
+tmp.txt
